tests/paczka1/fuzzy1/56937737.err
Error in line 2: xrXk3vx S324 1,2
Error in line 8: oNcy8PELqF3 S324 77,1
Error in line 7: x5AwC S523 92,8
Error in line 19: oNcy8PELqF3 S488 78,8
Error in line 20: x5AwC S488 60,4
Error in line 24: x5AwC A19R 184,8
Error in line 29: fxZ0EPXe4HÒS488Ò41,6
Error in line 26: fxZ0EPXe4H S324 78,2
Error in line 30: oNcy8PELqF3 S523 99,6
Error in line 23: x5AwC A190 62,0
